--- a/src/components/TrustpilotCard.astro
+++ b/src/components/TrustpilotCard.astro
@@ -1,11 +1,15 @@
 ---
+import { Image } from 'astro:assets';
 import Stjerne from "../assets/images/trustpilot_stjerne.svg";
 
 ---
 
 <div>
-    <div>
-        <Image src={Stjerne} alt="Trustpilot stjerne" class="" />
-        <Image src={Stjerne} alt="heyy"></Image>
+    <div class="flex gap-xs">
+        <Image src={Stjerne} alt="Trustpilot stjerne"></Image>
+        <Image src={Stjerne} alt="Trustpilot stjerne"></Image>
+        <Image src={Stjerne} alt="Trustpilot stjerne"></Image>
+        <Image src={Stjerne} alt="Trustpilot stjerne"></Image>
+        <Image src={Stjerne} alt="Trustpilot stjerne"></Image>
     </div>
 </div>
