--- a/src/components/Trustpilot.astro
+++ b/src/components/Trustpilot.astro
@@ -8,18 +8,29 @@ import TrustpilotCard from "../components/TrustpilotCard.astro";
 ---
 <div class="border-t border-orange-500">
     <div class="p-sm max-w-[1000px] mx-auto">
-        <div class="flex justify-center gap-s">
+        <div class="flex justify-center gap-xs md:gap-s">
             <div>
-                <Image src={Trustpilot} alt="Trustpilot logo" class="" />
+                <Image src={Trustpilot} alt="Trustpilot logo" />
             </div>
-            <h2 class="text-center italic text-orange-500">
+            <h2 class="self-end text-center italic text-orange-500">
                 Anmeldelser på Trustpilot
             </h2>
         </div>
-        <p class="flex justify-center">5 ud af 5 stjerner på Trustpilot</p>
+        <p class="flex justify-center mb-m">5 ud af 5 stjerner på Trustpilot</p>
 
-        <div class="mx-auto max-w-[500px] grid grid-cols-3 md:gap-lg gap-m p-s">
-            <TrustpilotCard />
+        <div class="mx-auto grid md:grid-cols-3 md:gap-lg gap-m">
+            <TrustpilotCard 
+            title="Nemt, lækkert og pengene værd!"
+            description="Super koncept. Super god beskrivelse af vinen og strakslevering af førstekasse. Jeg kan varmt anbefale naturvinskassen.dk!"
+            navn="Kasper KBH"/>
+            <TrustpilotCard 
+            title="Meget tilfreds kunde gennem fire år"
+            description="Interessante vine med informative beskrivelser, og fuldstændig problemfri levering og service hver gang. Højst anbefalet."
+            navn="Kenneth Kristensen"/>
+            <TrustpilotCard 
+            title="Fremragende naturvin..."
+            description="Meget tilfreds kunde gennem seks år. Super dejlig naturvin lige til døren en gang om måneden. Dejlige madanbefaleringer og skønne vine."
+            navn="Mads Bach Christensen"/>
 
         </div>
         <div class="flex justify-center md:justify-end mt-xs ">
