--- a/src/components/TrustpilotCard.astro
+++ b/src/components/TrustpilotCard.astro
@@ -2,14 +2,36 @@
 import { Image } from 'astro:assets';
 import Stjerne from "../assets/images/trustpilot_stjerne.svg";
 
+export interface Props {
+  title: string; // Titel
+  description?: string; // Anmeldelse
+  navn?: string; // Navn
+}
+
+const {
+  title = "Placeholder",
+  description = "Beskrivelse",
+  navn = "Navn",
+} = Astro.props;
 ---
 
-<div>
-    <div class="flex gap-xs">
-        <Image src={Stjerne} alt="Trustpilot stjerne"></Image>
-        <Image src={Stjerne} alt="Trustpilot stjerne"></Image>
-        <Image src={Stjerne} alt="Trustpilot stjerne"></Image>
-        <Image src={Stjerne} alt="Trustpilot stjerne"></Image>
-        <Image src={Stjerne} alt="Trustpilot stjerne"></Image>
+<div class="border border-orange-500">
+    <div class="flex justify-left gap-xxs p-xxs">
+        <Image src={Stjerne} alt="Trustpilot stjerne" class="w-[10%]"></Image>
+        <Image src={Stjerne} alt="Trustpilot stjerne" class="w-[10%]"></Image>
+        <Image src={Stjerne} alt="Trustpilot stjerne" class="w-[10%]"></Image>
+        <Image src={Stjerne} alt="Trustpilot stjerne" class="w-[10%]"></Image>
+        <Image src={Stjerne} alt="Trustpilot stjerne" class="w-[10%]"></Image>
+    </div>
+    <div class="border-t border-b border-orange-500 p-xs">
+        <h3 class="mb-xs">
+            {title}
+        </h3>
+        <p>
+            {description}
+        </p>
+    </div>
+    <div class="p-xxs">
+        <p class="text-right">{navn}</p>
     </div>
 </div>
