trustpilot rigtig færstig

--- a/src/components/Trustpilot.astro
+++ b/src/components/Trustpilot.astro
@@ -29,7 +29,7 @@ import TrustpilotCard from "../components/TrustpilotCard.astro";
             navn="Kenneth Kristensen"/>
             <TrustpilotCard 
             title="Fremragende naturvin..."
-            description="Meget tilfreds kunde gennem seks år. Super dejlig naturvin lige til døren en gang om måneden. Dejlige madanbefaleringer og skønne vine."
+            description="Meget tilfreds kunde gennem seks år. Super dejlig naturvin lige til døren en gang om måneden. Dejlige madanbefaleringer."
             navn="Mads Bach Christensen"/>
 
         </div>
