skifter text til desktop

--- a/src/components/MadVin.astro
+++ b/src/components/MadVin.astro
@@ -12,7 +12,7 @@ const animationClass =
 <div class="col-span-2 overflow-hidden">
   <div class="overflow-hidden whitespace-nowrap"> 
     <div class={`inline-block ${animationClass} min-w-full`}>
-      <span class="text-display sm:text-display-lg font-caslon font-semibold italic text-orange-500 text-center m-0 flex flex-row gap-8 md:gap-12">
+      <span class="text-display sm:text-display-desktop font-caslon font-semibold italic text-orange-500 text-center m-0 flex flex-row gap-8 md:gap-12">
         <span>Mad & Vin</span>
         <span>•</span>
         <span>Mad & Vin</span>
