--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -199,10 +199,11 @@ import HeroGif3 from "../assets/images/hero-3.gif";
 
 
   <!-- MAD & VIN SEKTION -->
-   <div class="mt-[200px]">
+
+
 
     <section
-    class="relative bg-transparent py-16 overflow-hidden"
+    class=" mt-[200px] relative bg-transparent py-16 overflow-hidden"
     id="scrollytelling-section">
   
     <!-- Scrolling Images (z-10 to be on top of MadVin) -->
