--- a/src/pages/naturvinskassen.astro
+++ b/src/pages/naturvinskassen.astro
@@ -28,7 +28,7 @@ import SkaalIkon from "../assets/images/skaal-ikon.svg";
     }
     li{
         @apply text-body;
-    @apply sm:text-body-lg;
+    @apply sm:text-body-desktop;
     @apply font-opensans;
     @apply font-regular;
     }
