sletter individuel styling til headings

--- a/src/components/Trustpilot.astro
+++ b/src/components/Trustpilot.astro
@@ -12,7 +12,7 @@ import TrustpilotCard from "../components/TrustpilotCard.astro";
             <div>
                 <Image src={Trustpilot} alt="Trustpilot logo" />
             </div>
-            <h2 class="self-end text-center italic text-orange-500">
+            <h2 class="self-end text-center italic ">
                 Anmeldelser på Trustpilot
             </h2>
         </div>
