--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -126,7 +126,7 @@ import HeroGif3 from "../assets/images/hero-3.gif";
 
       <!-- Text Section -->
        <div data-aos="fade-up" class="mt-ml px-xs md:px-[0px] md:sticky md:top-[20%] md:self-start">
-        <h1 class="italic mb-xxs md:mb-sm text-orange-500">
+        <h1 class="italic mb-xxs md:mb-sm ">
           Hvad er naturvin?
         </h1>
         <p class="mb-sm">
@@ -148,7 +148,7 @@ import HeroGif3 from "../assets/images/hero-3.gif";
   <div class="max-w-[1500px] mx-auto mt-8xl px-xs flex flex-col items-center">
     <!-- Section Title -->
     <div data-aos="fade-up" class="text-center">
-      <h1 class="italic mb-sm text-orange-500">
+      <h1 class=" mb-sm ">
       Se vine i denne måneds kasse
       </h1>
     </div>
@@ -252,7 +252,7 @@ import HeroGif3 from "../assets/images/hero-3.gif";
 
 
 <div>
-  <h2 data-aos="fade-up" class="mx-5 md:text-center italic text-orange-500 mb-s">
+  <h2 data-aos="fade-up" class="mx-5 md:text-center mb-s">
     Tre opskrifter i hver kasse
   </h2>
   <div data-aos="fade-up"
@@ -277,7 +277,7 @@ import HeroGif3 from "../assets/images/hero-3.gif";
 
         <!-- Text Section -->
         <div data-aos="fade-up" class="py-ml px-xs md:sticky md:top-[20%] md:self-start">
-              <h1 class="italic mb-xxs md:mb-sm text-orange-500">
+              <h1 class="italic mb-xxs md:mb-sm ">
                 Hvem er vi?
               </h1>
             <p class="text-body sm:text-body-lg font-opensans font-regular leading-relaxed mb-sm">
