--- a/src/pages/naturvinskassen.astro
+++ b/src/pages/naturvinskassen.astro
@@ -22,10 +22,7 @@ import Levering from "../assets/images/leveringikon.svg";
 import SkaalIkon from "../assets/images/skaal-ikon.svg";
 ---
 <style>
-    h1, h2{
-        @apply italic;
-        @apply text-orange-500
-    }
+
     li{
         @apply text-body;
     @apply sm:text-body-desktop;
@@ -108,7 +105,7 @@ animation: spin-slow 30s linear infinite; /* 10s duration, smooth infinite rotat
                     <h2 class="md:leading-5">
                         1.
                     </h2>
-                        <h3 class=" font-bold ">
+                        <h3 class=" ">
                             <!-- 1.
                             <br> -->
                             Bestil kassen
@@ -149,7 +146,7 @@ animation: spin-slow 30s linear infinite; /* 10s duration, smooth infinite rotat
                         <h2 class="md:leading-5">
                             2.
                         </h2>
-                        <h3 class=" font-bold">
+                        <h3 class=" ">
                             <!-- 2.
                             <br> -->
                             Vi udvælger vin
@@ -189,7 +186,7 @@ animation: spin-slow 30s linear infinite; /* 10s duration, smooth infinite rotat
                          <h2 class="md:leading-5">
                             3.
                          </h2>
-                        <h3 class=" font-bold ">
+                        <h3 class=" ">
                             <!-- 3.
                             <br> -->
                             Levering
@@ -226,7 +223,7 @@ animation: spin-slow 30s linear infinite; /* 10s duration, smooth infinite rotat
                             <h2 class=" md:leading-5">
                                 4.
                             </h2>
-                            <h3 class=" font-bold">
+                            <h3 class=" ">
                                 <!-- 4.
                                 <br> -->
                                 Nyd vinen
@@ -267,7 +264,7 @@ animation: spin-slow 30s linear infinite; /* 10s duration, smooth infinite rotat
       </div>
     </section>
     <div>
-      <h2 data-aos="fade-up" class="mt-sm  mx-s md:text-center italic text-orange-500 mb-s">
+      <h2 data-aos="fade-up" class="mt-sm  mx-s md:text-center mb-s">
         Når du bestiller Naturvinskassen får du:
       </h2>
     </div>
