--- a/src/pages/tak.astro
+++ b/src/pages/tak.astro
@@ -5,7 +5,7 @@ import Button from "../components/Button.astro";
 <MainLayout>
     <section class="max-w-[1000px] h-[80vh] md:h-[95vh] mx-auto flex place-content-center flex-col  md:flex md:flex-row ">
         <article class="md:self-center order-2  p-xs py-sm">
-            <h1 class="text-orange-500 italic text-center md:text-left">Tak for din bestilling!</h1>
+            <h1 class="text-center md:text-left">Tak for din bestilling!</h1>
             <p class="pb-xs text-center md:text-left ">
                 Lige om lidt vil du få en ordrebekræftelse sendt til dinmail@email.com. 
                 Vi glæder os til du får pakken. Kan du ikke vente? 
