--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,7 @@ import Vin8 from "../assets/images/vin8.svg";
 import MobilJoinThe from "../assets/images/mobil_join_the.svg";
 import MobilClub from "../assets/images/mobil_club.svg";
 import DesktopJoinTheClub from "../assets/images/desktop_join_the_club.svg";
+import HvadErNaturvin1gif from "../assets/images/vin.gif";
 import HvadErNaturvin1 from "../assets/images/hvad_er_naturvin1.webp";
 import HvadErNaturvin2 from "../assets/images/natural wine framing.webp";
 import JusteleRouge from "../assets/images/2021, Terra Ambra.webp";
@@ -120,7 +121,7 @@ import HeroGif3 from "../assets/images/hero-3.gif";
     <div class="md:grid md:grid-cols-2 md:gap-ml md:p-ml md:items-start">
       <!-- Images -->
        <div data-aos="fade-up" class="flex flex-col md:gap-ml">
-        <Image src={HvadErNaturvin1} alt="Mand der hælder vin op" class="w-full h-[350px] object-cover md:h-auto" />
+        <Image src={HvadErNaturvin1gif} alt="Mand der hælder vin op" class="w-full h-[350px] object-cover md:h-auto" />
         <Image src={HvadErNaturvin2} alt="Billede af vin" class="w-full h-[350px] object-cover md:h-auto" />
       </div> 
 
