--- a/src/components/VinCard.astro
+++ b/src/components/VinCard.astro
@@ -25,7 +25,7 @@ const createDots = (filled: number, total = 5) => {
 ---
 <div>
   <!-- Navn på vin -->
-  <h3 class="font-bold text-orange-500">
+  <h3 class="">
     {title}
   </h3>
 
