--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ import HeroGif2 from "../assets/images/hero-2.gif";
 import HeroGif3 from "../assets/images/hero-3.gif";
 ---
 
-  <MainLayout title="Naturvinskassen">
+  <MainLayout title="Naturvinskassen" description="Naturvin på abonnement. At være medlem af Naturvinskassen, er faktisk ganske simpelt! Som medlem, vil du hver måned modtage 3 flasker udvalgt ...">
     <article class="relative">
       <div class="grid  md:grid-cols-3 relative ">
         <Image src={HeroGif1} alt="" class="h-[55vh] object-cover hidden md:block" ></Image>
